clang/test/BSC/Negative/Generic/StaticAssert/generic_struct_static_assert_field.cbs
// RUN: %clang_cc1 -verify %s

struct SA<T> {
    int a;
    _Static_assert(a, ""); // expected-error {{use of undeclared identifier 'a'}}
};
